--- a/js-reference.html
+++ b/js-reference.html
@@ -129,6 +129,43 @@
           <a href="js-control/for-loops.html">For Loops</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="#">Uses of Loops</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#">Nested Loops</a>
+        </div>
+      </li>
+    </ol>
+
+    <h2>JS Miscellaneous</h2>
+    <hr>
+    <p class="descr">Miscellaneous topics in JavaScript.<br></p>
+
+    <ol>
+      <li>
+        <div class="li-div">
+          <a href="#">Random Numbers</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#">HTML dataset</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#">fetch() & JSON</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#">localStorage</a>
+        </div>
+      </li>
     </ol>
   </section>
 
