--- a/page-template.html
+++ b/page-template.html
@@ -19,9 +19,9 @@
   <main>
     <div class="title">
       <h1>TITLE</h1>
-      <a id="yt-link" href="#">
+      <a id="yt-link" href="#" target="_blank">
         <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
+        Video Lesson
       </a>
     </div>
 
