heading styles update

--- a/js-first-steps/js-comments.html
+++ b/js-first-steps/js-comments.html
@@ -17,16 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Comments</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Comments</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Comment Basics</h2>
     <p>Comments are ignored when a script is run.</p>
     <p>Single-line comments start with two forward slash characters (<code class="lang-js">//</code>).</p>
     <p>A comment may be a full line or follow a statement.</p>
@@ -45,7 +39,7 @@ alert("World"); // A comment after a statement
       multiple lines of code by selecting the code and then pressing <code class="lang-js">Ctrl + /</code>.</p>
     <hr>
 
-    <h2>Why Comments?</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Why Comments?</h2>
     <p>Comments are often used to:</p>
     <ul>
       <li>highlight the overall architecture of your code (titles, headings, ...)</li>
