--- a/js-first-steps/js-introduction.html
+++ b/js-first-steps/js-introduction.html
@@ -17,24 +17,22 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>Introduction to JavaScript</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
+    <h1>Introduction to JavaScript</h1>
 
     <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> What is JavaScript?</h2>
+    <p>JavaScript is a programming language.</p>
+    <p>JavaScript may be used to make web pages "come alive".</p>
 
     <p>
       <img class="img-fluid" src="img/programming-definition.png" alt="Programming Definition">
     </p>
     <p>Programming involves using a programming language to instruct a computer to complete a task.</p>
     <p>JavaScript is a programming language that may be used to build web applications.</p>
-
-    <h2>JavaScript How To</h2>
     <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> JavaScript How To</h2>
 
     <p>The recommended way to run JavaScript code is to load an <strong>external JavaScript file</strong> into your html
       document using a <code class="lang-html">&lt;script&gt;</code> element.</p>
@@ -68,6 +66,24 @@ alert("Welcome to JavaScript.");
 &lt;/body&gt;
       </code></pre>
     </p>
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>An algorithm is a step by step set of instructions to complete a task.</li>
+      <li>Programming involves using programming languages to implement algorithms.</li>
+      <li>JavaScript is a programming language for web applications.</li>
+      <li>Run JavaScript using an external js file and the <code class="lang-js">&lt;script&gt;</code> tag.</li>
+      <li>The <code class="lang-js">alert()</code> function will display a provided message in an alert-box.</li>
+    </ul>
+    <hr>
+
+    <h2><i class="far fa-check-square check"></i> Check Your Understanding</h2>
+    <p>Try to do the following task(s) to check your understanding. Ask for help if needed.</p>
+    <ul>
+      <li>Use the <code class="lang-js">alert()</code> function to display some message of your own.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
