js-first-steps update

--- a/js-first-steps/dev-console.html
+++ b/js-first-steps/dev-console.html
@@ -17,16 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>Developer Console</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>Developer Console</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> What is the Developer Console?</h2>
     <p>The developer console is a part of a web browser. The developer console is useful for:</p>
     <ul>
       <li>seeing errors</li>
@@ -35,7 +29,7 @@
     </ul>
     <hr>
 
-    <h2>Open the Developer Console</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Open the Developer Console</h2>
     <p>Most Developers lean towards Chrome or Firefox for development because those browsers have the best developer
       tools.</p>
     <p>To open the developer tools in the Chrome browser:</p>
@@ -47,7 +41,7 @@
     <p><img class="img-fluid" src="img/console-tab.PNG" alt="Console Tab"></p>
     <hr>
 
-    <h2>Seeing Errors</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Seeing Errors</h2>
     <p>When we make errors in our code, certain types of errors may have information about the error displayed in the
       developer console. This is very useful when trying to fix the errors.</p>
     <h4>script.js</h4>
@@ -67,7 +61,7 @@ aler("Hello World");
     </p>
     <hr>
 
-    <h2>Running Commands</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Running Commands</h2>
     <p>It is possible to run JavaScript commands in the console. This is sometimes useful when testing out different
       features of the JavaScript language.</p>
     <p>To run a command in the console, simply type a command after the <code class="lang-js">&gt;</code> sign and press
@@ -76,7 +70,7 @@ aler("Hello World");
     <p><img src="img/console-run-commands.PNG" alt="Run Commands in Console" class="img-fluid"></p>
     <hr>
 
-    <h2>Logging to the Console</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Logging to the Console</h2>
     <p>When testing code, it is sometimes useful to log information to the console.</p>
     <p>To log to the console, use the <code class="lang-js">console.log()</code> method.</p>
     <h4>script.js</h4>
@@ -86,6 +80,17 @@ console.log("Hello Console!");
     <p>
       <img src="img/console-log.PNG" alt="Console Log" class="img-fluid">
     </p>
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Open the console by pressing <code class="lang-js">F12</code> or right click and <code
+          class="lang-js">Inspect</code>.</li>
+      <li>The console is useful for getting information about programming errors.</li>
+      <li>The console may be used to run JavaScript commands.</li>
+      <li><code class="lang-js">console.log()</code> is a JavaScript command that will log a message to the console.
+      </li>
+    </ul>
     <hr>
   </main>
 
