--- a/js-first-steps/js-comments.html
+++ b/js-first-steps/js-comments.html
@@ -49,6 +49,14 @@ alert("World"); // A comment after a statement
     <p>Comments will help others understand your code and will help you maintain your code when you come back to it
       later.</p>
     <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Use <code class="lang-js">//</code> for JavaScript comments.</li>
+      <li>Use comments to highlight code structure, explain solutions and disable code.</li>
+      <li>Comments should make code easier to understand and maintain.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
