--- a/js-first-steps/js-input-prompt.html
+++ b/js-first-steps/js-input-prompt.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Input - prompt()</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Input - prompt()</h1>
     <hr>
 
-    <h2>Text Input</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Text Input</h2>
     <p>The <code class="lang-js">prompt()</code> function will open a prompt-box where the user can provide text input.
       The text input that is returned from the <code class="lang-js">prompt()</code> function and may be stored in a
       variable for later use.</p>
@@ -44,7 +37,7 @@ alert("Hello " + name + "!");
     </p>
     <hr>
 
-    <h2>Numerical Input</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Numerical Input</h2>
     <p>Input received from the <code class="lang-js">prompt()</code> function is <em>always returned as a String data
         type</em>.</p>
     <p>If you want numerical input, convert the String that <code class="lang-js">prompt()</code> returns to a Number
@@ -59,6 +52,13 @@ let num2 = Number(prompt("Please enter a number:"));
     </code></pre>
     <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>The <code class="lang-js">prompt()</code> function may be used to get input from the user via a prompt-box.
+      </li>
+      <li>The <code class="lang-js">prompt()</code> function always returns user input as a String data type.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
