--- a/js-first-steps/js-number-data.html
+++ b/js-first-steps/js-number-data.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Number Data</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Number Data</h1>
     <hr>
 
-    <h2>Number Data Type</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Number Data Type</h2>
     <p>Another common type of data is the <strong>Number</strong> data type.</p>
     <p>A Number is simply a numerical value (with or without a decimal) that is not enclosed by quotes.</p>
     <p>
@@ -39,7 +32,7 @@
     </p>
     <hr>
 
-    <h2>Number Operations</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Number Operations</h2>
     <p>JavaScript supports common math operations on Numbers.</p>
 
     <h4>Addition (<code class="lang-js">+</code>)</h4>
@@ -79,7 +72,12 @@ console.log((1 + 2) * 3); // Output=> 9
     </code></pre>
     <hr>
 
-
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>The Number data type is used to represent numbers.</li>
+      <li>The basic math operations for numbers are supported by JavaScript.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
