--- a/js-first-steps/js-string-data.html
+++ b/js-first-steps/js-string-data.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS String Data</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS String Data</h1>
     <hr>
 
-    <h2>String Data Type</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> String Data Type</h2>
     <p>A common type of data that programs work with is the <strong>String</strong> data type.</p>
     <p>A String is a squence of characters used to represent text. Strings are enclosed by matching double or single
       quotes.</p>
@@ -42,7 +35,7 @@
     </p>
     <hr>
 
-    <h2>String Concatenation</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> String Concatenation</h2>
     <p>The operation of joining strings together is called <strong>concatenation</strong>.</p>
     <p>In JavaScript, concatenation is done with the <code class="lang-js">+</code> operator.</p>
     <p>
@@ -53,7 +46,7 @@ console.log("Hi" + " There!"); // Output=> "Hi There!"
     </p>
     <hr>
 
-    <h2>String Properties & Methods</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> String Properties & Methods</h2>
     <p>There are some useful properties and methods that work on String data.</p>
 
     <h4>Length Property</h4>
@@ -77,7 +70,15 @@ console.log("JavaScript".toUpperCase()); // Output=> "JAVASCRIPT"
     </p>
     <hr>
 
-
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>The String data type is used to represent text.</li>
+      <li>Join strings together (concatenate) with the <code class="lang-js">+</code> operator.</li>
+      <li>Use the <code class="lang-js">length</code> property to get the number of characters in a string.</li>
+      <li>Use the <code class="lang-js">toLowerCase()</code> and <code class="lang-js">toUpperCase()</code> methods to
+        convert strings to all lowercase or all uppercase.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
