--- a/js-first-steps/js-variable-operators.html
+++ b/js-first-steps/js-variable-operators.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Variables Operators</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Variables Operators</h1>
     <hr>
 
-    <h2>Modify and Assign</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Modify and Assign</h2>
     <p>It is common to apply an operator to a variable and store the new result in that same variable.</p>
     <pre><code class="lang-js">
 // Declare & Assign
@@ -53,7 +46,7 @@ greeting = greeting + "!";
     </code></pre>
     <hr>
 
-    <h2>Shorthand Operators</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Shorthand Operators</h2>
     <p>Shorthand operators exist to concisely accomplish the same "modify and assign" tasks as above.</p>
     <pre><code class="lang-js">
 // Declare & Assign
@@ -78,7 +71,7 @@ greeting += "!"; // Same as greeting = greeting + "!";
     </code></pre>
     <hr>
 
-    <h2>Increment and Decrement</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Increment and Decrement</h2>
     <p>There are special operators for increasing or decreasing a variable by one.</p>
     <pre><code class="lang-js">
 // Declare & Assign
@@ -92,6 +85,15 @@ console.log(counter); // Output => 2
 counter--; // Same as counter = counter - 1 or counter -= 1
 console.log(counter); // Output => 1
     </code></pre>
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>It is common to apply an operator to a variable and store the result in that same variable (<code
+          class="lang-js">n = n + 1</code>).</li>
+      <li>Shorthand operators may be used to accomplish this task concisely (<code class="lang-js">+=, -=, *=, /=, ++,
+          --</code>).</li>
+    </ul>
     <hr>
   </main>
 
