--- a/js-first-steps/js-variables.html
+++ b/js-first-steps/js-variables.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Variables</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Variables</h1>
     <hr>
 
-    <h2>Storing Data with Variables</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Storing Data with Variables</h2>
     <p>Variables are used to store and manage program data.</p>
     <p>A variable is a "named storage container" for data.</p>
     <p>To create a variable use the <code class="lang-js">let</code> keyword.</p>
@@ -77,7 +70,7 @@ let age = 15;
     </p>
     <hr>
 
-    <h2>Naming Variables</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Naming Variables</h2>
     <p>Take note of some rules and conventions to follow when naming a variable:</p>
     <ul>
       <li>Begin variable names with a lower-case letter</li>
@@ -87,6 +80,13 @@ let age = 15;
       <li>Make variable names intuitive: describe what they store</li>
       <li>Avoid using JavaScript reserved words (eg. <code class="lang-js">let</code>, <code
           class="lang-js">alert</code>, <code class="lang-js">console</code>, ...)</li>
+    </ul>
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Variables are used to store data.</li>
+      <li>Follow the rules for naming variables to make them valid and meaningful.</li>
     </ul>
     <hr>
   </main>
