--- a/page-template.html
+++ b/page-template.html
@@ -20,6 +20,23 @@
     <h1>TITLE</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Topic Heading</h2>
+
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>...</li>
+    </ul>
+    <hr>
+
+    <h2><i class="far fa-check-square check"></i> Check Your Understanding</h2>
+    <p>Try to do the following task(s) to check your understanding. Ask for help if needed.</p>
+    <ul>
+      <li>...</li>
+    </ul>
+    <hr>
+
 
   </main>
 
