html-interaction update

--- a/html-interaction/click-events.html
+++ b/html-interaction/click-events.html
@@ -17,20 +17,13 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>Click Events</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>Click Events</h1>
     <hr>
 
     <p>In JavaScript, code may be executed on demand by using <strong>Functions</strong> and <strong>Event
         Listeners</strong>.</p>
 
-    <h2>Functions</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Functions</h2>
     <p>A function may be thought of as a named block of code.</p>
     <pre><code class="lang-js">
 // Define a function that stores code
@@ -49,7 +42,7 @@ function greeting() {
     <p>Function names should follow the same rules and conventions as variable names.</p>
     <hr>
 
-    <h2>Event Listeners</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Event Listeners</h2>
     <p>Event listeners may be added to HTML elements. Event listeners will tell a specified function to do its job when
       a certain event occurs.</p>
 
@@ -80,6 +73,13 @@ btnEl.addEventListener("click", greeting);
     </code></pre>
     <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Functions may be used to store blocks of code.</li>
+      <li>Event listeners may be added to html elements. When the specified event occurs, the event listener will tell
+        the provided function to run its code.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
