--- a/html-interaction/inner-html.html
+++ b/html-interaction/inner-html.html
@@ -17,16 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>innerHTML</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>innerHTML</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Set Element Content</h2>
     <p>JavaScript is able to set the content of an HTML element with the <code class="lang-js">innerHTML</code>
       property.</p>
     <p>The <code class="lang-js">innerHTML</code> of an element is the content between the element's opening and closing
@@ -64,6 +58,11 @@ function changeContent() {
     </code></pre>
     <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Use an elements <code class="lang-js">innerHTML</code> property to set the content of the element.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
