--- a/html-interaction/modify-style.html
+++ b/html-interaction/modify-style.html
@@ -17,16 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>Modify Style</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>Modify Style</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Modify Style with JavaScript</h2>
     <p>JavaScript may be used to select an element and modify its style.</p>
     <p>Modify an element with the <code class="lang-js">style</code> property.</p>
     <p>CSS properties with hyphens need to be changed to camelCasing.<br>
@@ -63,6 +57,13 @@ function modifyStyle() {
   paragraphEl.style.textAlign = "center";
 }
   </code></pre>
+    <hr>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Use the <code class="lang-js">style</code> property to modify the style of an element.</li>
+      <li>JavaScript does not support hyphens, so CSS properties with hyphens need to be changed to camelCasing.</li>
+    </ul>
     <hr>
   </main>
 
