--- a/js-reference.html
+++ b/js-reference.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Reference</title>
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
   <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
   <link href="css/home.css" rel="stylesheet" type="text/css" />
@@ -20,7 +21,7 @@
   </header>
 
   <section>
-    <h2>JS First Steps</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS First Steps</h2>
     <hr>
     <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.<br></p>
 
@@ -57,6 +58,11 @@
       </li>
       <li>
         <div class="li-div">
+          <a href="#">Random Numbers</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
           <a href="js-first-steps/js-variables.html">Variables</a>
         </div>
       </li>
@@ -72,7 +78,7 @@
       </li>
     </ol>
 
-    <h2>JS HTML Interaction</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS HTML Interaction</h2>
     <hr>
     <p class="descr">Learn how JavaScript may be used to interact with elements of a web page.<br></p>
 
@@ -104,7 +110,7 @@
       </li>
     </ol>
 
-    <h2>JS Control Structures</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS Control Structures</h2>
     <hr>
     <p class="descr">Learn how JavaScript may be used to select and repeat code with if statements and loops.<br></p>
 
@@ -141,16 +147,12 @@
       </li>
     </ol>
 
-    <h2>JS Miscellaneous</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS Miscellaneous</h2>
     <hr>
     <p class="descr">Miscellaneous topics in JavaScript.<br></p>
 
     <ol>
-      <li>
-        <div class="li-div">
-          <a href="#">Random Numbers</a>
-        </div>
-      </li>
+
       <li>
         <div class="li-div">
           <a href="#">HTML dataset</a>
