--- a/html-interaction/getElementById.html
+++ b/html-interaction/getElementById.html
@@ -17,16 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>GetElementById</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>GetElementById</h1>
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Getting HTML Elements</h2>
     <p>If an HTML element has an id attribute, JavaScript may use the <code
         class="lang-js">document.getElementById()</code> method to get a reference to that HTML element.</p>
     <p>A reference to the element may be stored in a variable.</p>
@@ -59,7 +53,16 @@ console.log(paragraphEl);
     <p>
       <img src="img/getElementByIdEg.PNG" alt="Get Element By Id Example" class="img-fluid">
     </p>
+    <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>JavaScript can use <code class="lang-js">document.getElementById()</code> to get a reference to an html
+        element.</li>
+      <li>Further lessons will show how JavaScript can use a reference to an html element to interact with the web page.
+      </li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
