js-control update

--- a/js-control/boolean-expressions.html
+++ b/js-control/boolean-expressions.html
@@ -17,17 +17,10 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS Boolean Expressions</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS Boolean Expressions</h1>
     <hr>
 
-    <h2>Boolean Data Type</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Boolean Data Type</h2>
     <p>JavaScript has a <strong>Boolean Data Type</strong> that can be one of two possible values: <strong>true</strong>
       or <strong>false</strong>.</p>
     <pre><code class="lang-js">
@@ -36,7 +29,7 @@ let found = false;
     </code></pre>
     <hr>
 
-    <h2>Boolean Expressions</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Boolean Expressions</h2>
     <p>Mathemetical expression evaluate to a Number data type...</p>
     <p>Boolean expressions evaluate to a Boolean data type...</p>
     <p><strong>Boolean Expressions</strong> are expressions that evaluate to <strong>true</strong> or
@@ -50,7 +43,7 @@ console.log(age < 10); // Output=> false
     <p>Boolean expressions are made with <strong>comparison and logical operators</strong>...</p>
     <hr>
 
-    <h2>Comparison Operators</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Comparison Operators</h2>
     <p>Comparison operators are used to build boolean expressions:</p>
     <ul>
       <li>Equal To: <code class="lang-js">===</code></li>
@@ -91,7 +84,7 @@ console.log(age <= 15); // Output=> true
     </code></pre>
     <hr>
 
-    <h2>Logical Operators</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Logical Operators</h2>
     <p>Logical Operators allow you to build more complex boolean expressions by connecting simple boolean expressions:
     </p>
     <ul>
@@ -122,6 +115,13 @@ console.log(!found); // Output=> true
     </code></pre>
     <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>Boolean data type is true or false.</li>
+      <li>Boolean expressions evaluate to true or false.</li>
+      <li>Boolean expressions are made up of comparison and logical operators.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
