--- a/js-control/if-statements.html
+++ b/js-control/if-statements.html
@@ -17,22 +17,13 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS If Statements</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS If Statements</h1>
     <hr>
 
-    <h2>Selection Control Structure</h2>
-    <p><strong>If statements</strong> are a type of selection control structure. They allow you to control / select what
+    <p>If statements are a type of <strong>selection control structure</strong>. They allow you to control / select what
       code to execute.</p>
-    <hr>
 
-    <h2>Binary Selection</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Binary Selection</h2>
     <p>Select one of two paths...</p>
     <pre><code class='lang-js'>
 if (boolean_expression) {
@@ -46,7 +37,7 @@ if (boolean_expression) {
     </p>
     <hr>
 
-    <h2>Unary Selection</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Unary Selection</h2>
     <p>Select path or not...</p>
     <pre><code class='lang-js'>
 if (boolean_expression) {
@@ -58,7 +49,7 @@ if (boolean_expression) {
     </p>
     <hr>
 
-    <h2>Chained Selection</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Chained Selection</h2>
     <p>Select one of multiple paths...</p>
     <pre><code class='lang-js'>
 if (boolean_expression_1) {
@@ -96,7 +87,7 @@ if (boolean_expression_1) {
     </p>
     <hr>
 
-    <h2>Nested If Statements</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Nested If Statements</h2>
     <p>If statements may be nested inside of other if statements.</p>
     <pre><code class='lang-js'>
 // Outer Binary If Statement
@@ -120,6 +111,15 @@ if (boolean_expression_1) {
     </code></pre>
     <hr>
 
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>If statements are a type of selection control structure.</li>
+      <li>A Binary If statement selects one of two paths.</li>
+      <li>A Unary If statement selects one path or not.</li>
+      <li>A Chained If statement selects one of multiple paths (or no path if the else is excluded).</li>
+      <li>If statements may be nested inside of other if statements.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
