--- a/js-control/while-loops.html
+++ b/js-control/while-loops.html
@@ -17,15 +17,12 @@
   <nav></nav>
 
   <main>
-    <div class="title">
-      <h1>JS While Loops</h1>
-      <a id="yt-link" href="#">
-        <i class="fab fa-youtube fa-lg"></i>
-        Topic Explanation
-      </a>
-    </div>
-
+    <h1>JS While Loops</h1>
     <hr>
+
+    <p>A while loop is a type of <strong>repetition control structure.</strong></p>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> While Loop Basics</h2>
 
     <p>The code inside of a while loop will repeatedly execute as long as the condition is true.</p>
     <pre><code class="lang-js">
@@ -54,6 +51,23 @@ while (num <= 100) {
     </ol>
     <hr>
 
+    <div class="attention-box">
+      <h4><i class="fas fa-exclamation-triangle attention"></i> Warning - Infinite Loops</h4>
+      <p>An infinite loop is a loop that continuously executes and will never end.</p>
+      <p>Common causes of infinite loops include:</p>
+      <ul>
+        <li>An faulty condition that will always be true.</li>
+        <li>Forgetting to update the variable that is tested in the condition.</li>
+      </ul>
+    </div>
+
+    <h2><i class="far fa-list-alt summary"></i> Summary</h2>
+    <ul>
+      <li>A while loop will repeatedly execute the code inside of the loop body as long as the provided condition is
+        true.</li>
+      <li>Be careful of infinite loops.</li>
+    </ul>
+    <hr>
   </main>
 
   <!-- Load Nav -->
