--- a/page-template.html
+++ b/page-template.html
@@ -37,6 +37,15 @@
     </ul>
     <hr>
 
+    <div class="attention-box">
+      <h4><i class="fas fa-exclamation-triangle attention"></i> Attention</h4>
+      <ul>
+        <li>be sure to use an event listener to give the user time to type something into the input element!</li>
+        <li>the value of the input element is always a String data type. Convert to a Number data type if required.</li>
+      </ul>
+    </div>
+    <hr>
+
 
   </main>
 
