--- a/cs30.html
+++ b/cs30.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>CS20</title>
+  <title>CS30</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
   <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
@@ -15,15 +15,15 @@
   <nav></nav>
 
   <header>
-    <h1>Computing Science 20</h1>
-    <p class="lead">Learn more JavaScript to build bigger and better web games & applications.</p>
+    <h1>Computing Science 30</h1>
+    <p class="lead">Study Search & Sort Algorithms and Explore Topics of Interest</p>
     <p class="motto">Learn - Think - Create</p>
   </header>
 
   <section>
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Functions</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Search & Sort Algorithms</h2>
     <hr>
-    <p class="descr">Learn how to use JavaScript functions to make organized and efficient programs.<br></p>
+    <p class="descr">Learn about various search & sort algorithms.<br></p>
 
     <ol>
       <li>
@@ -33,9 +33,9 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Data Structures</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Second Language Programming</h2>
     <hr>
-    <p class="descr">Learn how to use JavaScript arrays to manage program data.<br></p>
+    <p class="descr">Master a Second Programming Language.<br></p>
 
     <ol>
       <li>
@@ -45,24 +45,10 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Portfolio Project</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS OOP Web Games</h2>
     <hr>
-    <p class="descr">Create a portfolio of JavaScript programs. Apply course concepts and explore new concepts.</p>
+    <p class="descr">Learn about OOP to help design & build web games.</p>
 
-    <p>
-      <a href="#" class="btn">JS Portfolio Instructions</a>
-    </p>
-
-    <h4>More JavaScript</h4>
-    <ol>
-      <li>
-        <div class="li-div">
-          <a href="#">Lesson 1</a>
-        </div>
-      </li>
-    </ol>
-
-    <h4>Game Development</h4>
     <ol>
       <li>
         <div class="li-div">
